Update Readme file. Fixt top and bottom container spacing.

--- a/styles.css
+++ b/styles.css
@@ -132,9 +132,6 @@ main {
 }
 
 /* ======= recipe ======= */
-.recipe-image {
-  /* max-width: 23.4375rem; */
-}
 
 .recipe-desc-container,
 .ingredient-container,
@@ -303,7 +300,8 @@ footer {
   flex-flow: column wrap;
   justify-content: end;
   align-items: center;
-  padding-top: 3rem;
+  padding-top: 8rem;
+  padding-bottom: 1rem;
 }
 
 footer p {
@@ -325,6 +323,7 @@ footer a {
     /* max-width: 616px; */
     border-radius: 24px;
     padding-top: 2.5rem;
+    margin-top: 8rem;
   }
 
   .recipe-image {
